Bugfix - Corrected minor spacing and spelling issues

--- a/css/pipboy.app.css
+++ b/css/pipboy.app.css
@@ -206,7 +206,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 25vh;
+    height: 20vh;
     margin: 1vh 0vh;
 }
 
